--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -1,4 +1,4 @@
-- title: "MATH 222: Calculus 2"
+- title: "MATH 222: Calculus II"
   role: "Head Teaching Assistant"
   highlight: 1
   panel: true
@@ -16,7 +16,7 @@
   year: Aug 2022 - Sep 2023
   location: Madison, WI
   roledescription: Meet with students weekly one on one to help with college level math courses.
-- title: "MATH 234: Calculus Functions of Several Variables"
+- title: "MATH 234: Calculus III"
   panel: false
   type: Past
   role: Teaching Assistant
@@ -27,7 +27,7 @@
   image: calculus3.jpg
   description: This page organizes calculus III discussion sections 369 and 370 running in Fall 2022.
   roledescription: Hold weekly problem solving sessions and office hours.
-- title: "MATH 234: Calculus Functions of Several Variables"
+- title: "MATH 234: Calculus III"
   panel: true
   type: Past
   role: Teaching Assistant
@@ -38,7 +38,7 @@
   image: calculus3.jpg
   description: This page organizes calculus III discussion sections 343 and 345 running in Spring 2023.
   roledescription: Hold weekly problem solving sessions and office hours.
-- title: "MATH 221: Calculus and Analytic Geometry I"
+- title: "MATH 221: Calculus I"
   panel: true
   professor: Gabriele Meyer 
   sections: 429, 431
@@ -50,7 +50,7 @@
   image: calculus1.jpg
   description: This page organizes calculus discussion sections 429 and 431 running in Fall 2020.
   roledescription: Hold weekly problem solving sessions.
-- title: "MATH 221: Calculus and Analytic Geometry I"
+- title: "MATH 221: Calculus I"
   panel: true
   sections: 341, 344
   professor: Alex Waldron
