Fix paul's website

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -18,7 +18,7 @@ Amy Langville:
   url: "http://langvillea.people.cofc.edu"
 
 Paul Anderson:
-  url: "https://anderson-data-science.com/people/"
+  url: "https://anderson-lab.github.io/people/"
 
 Tim Chartier:
   url: "https://www.davidson.edu/people/tim-chartier"
