--- a/_data/organizing.yml
+++ b/_data/organizing.yml
@@ -1,29 +1,39 @@
 - title: GAeL XXXI
   type: Conference
+  dates: June 2024
+  location: Turin, Italy
   url: "https://sites.google.com/view/gaelxxxi"
   highlight: 2
   image: gaelxxx.jpg
   description: Géométrie Algébrique en Liberté, also known as GAeL, is an annual workshop organized by and for young algebraic geometers.   
 - title: GAeL XXX
+  dates: July 2023
   type: Conference
+  location: Coventry, UK
   url: "https://sites.google.com/view/gaelxxx/home"
   image: gaelgroupphoto.jpeg
   description: Géométrie Algébrique en Liberté, also known as GAeL, is an annual workshop organized by and for young algebraic geometers. 
 - title: 3264 and all that
   type: Reading Group
-  url: "/organization/3264"
+  location: Madison, WI
+  dates: Spring 2023
+  url: "/organizing/3264"
   book: "https://scholar.harvard.edu/files/joeharris/files/000-final-3264.pdf"
   image: 3264.jpg
   description: "3264 and all that is a textbook by David Eisenbud and Joe Harris. This page organizes the Spring 2023 reading schedule."
 - title: Positivity in Algebraic Geometry
+  location: Madison, WI
+  dates: Spring 2022
   type: Reading Group
-  url: "/organization/positivity"
+  url: "/organizing/positivity"
   book: "https://cims.nyu.edu/~rodion/lib/R.%20K.%20Lazarsfeld.%20Positivity%20in%20Algebraic%20Geometry,%20I.%20Classical%20Setting:%20Line%20Bundles%20and%20Linear%20Series%20-%202003.pdf"
   image: positivity.jpg
   description: "Positivity in Algebraic Geometry is a textbook by Robert Lazarsfeld. This page organizes the Spring 2022 reading schedule."
 - title: Geometry of Schemes
+  location: Madison, WI
+  dates: Summer 2020
   type: Reading Group
-  url: "/organization/geometryofschemes"
+  url: "/organizing/geometryofschemes"
   book: "https://www.maths.ed.ac.uk/~v1ranick/papers/eisenbudharris.pdf"
   image: geometryofschemes.jpg
   description: "Geometry of Schemes is a textbook by David Eisenbud and Joe Harris. This page organizes the Summer 2020 reading schedule."
@@ -33,7 +43,9 @@
   image: drp.jpg
   description: "The DRP is a math mentoring program that pairs undergraduate students with graduate student mentors, for a semester-long independent study project."
   highlight: 3
-- title: Graduate Algebraic Geometry Seminar (GAGS)
+- title: UW Madison Graduate Algebraic Geometry Seminar
+  location: Madison, WI
+  dates: Fall 2021 -
   type: Seminar
   url: "https://hilbert.math.wisc.edu/wiki/index.php/Graduate_Algebraic_Geometry_Seminar"
   image: grothendieck_devil.jpg
@@ -41,7 +53,9 @@
   highlight: 4
 - title: The Rising Sea
   type: Reading Group
-  url: "/organization/vakilsummer2021"
+  dates: Summer 2021
+  url: "/organizing/vakilsummer2021"
   book: "http://math.stanford.edu/~vakil/216blog/FOAGdec3014public.pdf05"
+  location: Madison, WI
   image: clebsch.jpg
   description: "The Red Rising Sea is a set of notes by Ravi Vakil. This page organizes the Summer 2021 reading schedule."
