--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -42,8 +42,8 @@
 - title: "Multigraded regularity of curves"
   type: Poster
   location: Western Algebraic Geometry Symposium
-  city: Fort Collins, CO
-  date: 2022-04-22
+  city: Riverside, CA
+  date: 2022-11-05
 - title: "Virtual Resolutions and Syzygies"
   location: AMS Special Session on Building Bridges Between Commutative Algebra and Nearby Areas 
   type: Conference
