Added short description to service awards

--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -5,6 +5,7 @@
   years: 2023
   sponsor: UW Madison Mathematics Department
   description: Award based on nominations and comments from faculty, staff, and students and is given for those who contribute to the department, university or broader community through their remarkable service.
+  short-description: Awarded to 3/120 Math Department Teaching Assistants.
 - name: First Place for Early Stage ($3,500)
   years: 2021
   sponsor: Transcend Madison Competition
