--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -36,6 +36,29 @@
 #    - Conference
 #    - Journal
 
+- id: LikelihoodGeometry
+  title: The Likelihood Correspondence of Toric Models
+  year: 2024
+  authors:
+    - David Barnhill
+    - John Cobb
+    - Matthew Faust
+  venue: In progress
+  hide: true
+  type: 
+    - In Progress
+
+- id: MultigradedStillman
+  title: Multigraded Stillman's Conjecture
+  year: 2024
+  authors:
+    - John Cobb
+    - Nathan Gallup
+  venue: In progress
+  type:
+    - In Progress
+ 
+
 - id: SheafDiffusion
   title: Extending Transductive Knowledge Graph Embedding Models for Inductive Logical Relational Inference
   year: 2023
@@ -89,7 +112,7 @@
     - Virtual Resolutions
     - Toric Varieties
   type:
-    - Journal
+    - Published
 
 - id: QKdV
   title: "Quarternion-Valued Breather Soliton, Rational, and Periodic QKdV Solutions"
@@ -112,7 +135,7 @@
     - Integrable Systems
     - Mathematical Physics
   type:
-    - Journal
+    - Published
     
 - id: P3HT
   title: "Aggregate Dispersions to Enhance the Intrachain Order in Surfactant-Stabilized Aqueous Colloids of Poly(3-hexylthiophene)"
@@ -134,7 +157,7 @@
   tags:
     - Physical Chemistry
   type:
-    - Journal
+    - Published
   
 - id: bachelor-thesis
   title: "Quaternion-Valued KdV Solutions"
