--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -2,12 +2,17 @@
   where: Turin, Italy
   start: 2024-06-17
   end: 2024-06-21
+- title: MSRI Commutative Algebra Workshop
+  venue: MSRI
+  where: Berkeley, CA
+  start: 2024-01-22
+  end: 2024-01-26
 - title: Joint Mathematics Meetings
   venue: San Francisco, CA
   start: 2024-01-03
   end: 2024-01-06
 - title: Algebra Days
-  venua: Arizona State University
+  venue: Arizona State University
   where: Tempe, AZ
   start: 2023-11-03
   end: 2023-11-05
