--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -2,7 +2,7 @@
   where: Turin, Italy
   start: 2024-06-17
   end: 2024-06-21
-- title: MSRI Commutative Algebra Workshop
+- title: Commutative Algebra Workshop
   venue: MSRI
   where: Berkeley, CA
   start: 2024-01-22
