update publication location

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -85,7 +85,7 @@
   year: 2023
   authors: 
     - John Cobb
-  venue: Submitted
+  venue: to appear in Mathematische Zeitschrift
   arxiv: "2301.05979"
   pdf: https://arxiv.org/pdf/2301.05979.pdf
   highlight: true
