--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -2,6 +2,10 @@
   where: Turin, Italy
   start: 2024-06-17
   end: 2024-06-21
+- title: NIST
+  where: Boulder, CO
+  start: 2024-03-18
+  end: 2024-03-20
 - title: Commutative Algebra Workshop
   venue: MSRI
   where: Berkeley, CA
