--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -37,7 +37,7 @@
 #    - Journal
 
 - id: LikelihoodGeometry
-  title: The Likelihood Correspondence of Toric Models
+  title: The Likelihood Correspondence of Statistical Models
   year: 2024
   authors:
     - David Barnhill
