Add ACMD Seminar

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,3 +1,9 @@
+- title: "Sheaf Laplacians and Missing Data"
+  location: ACMD Seminar
+  city: Boulder, CO
+  type: Seminar
+  date: 2024-03-19
+  url: https://www.nist.gov/itl/math/acmd-seminar-series
 - title: "Multigraded regularity of curves"
   location: JMM Special Session on Recent Developments in Commutative Algebra
   city: San Francisco, CA
