--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -18,7 +18,7 @@
   date: 2024-01-03
   url: https://www.jointmathematicsmeetings.org/meetings/national/jmm2024/2300_intro
   abstract: "The Laplacian of a graph is a matrix that encodes the local geometry of the graph. It is a fundamental object in spectral graph theory, and has been used to study a variety of problems in machine learning. In this talk, I will discuss a generalization called the sheaf Laplacian and how this can be used to study problems with missing data in the world of knowledge graphs."
-- title: "Likelihood Correspondence of Toric Models"
+- title: "Likelihood Correspondence of Statistical Models"
   location: UW Madison Graduate Algebraic Geometry Seminar
   city: Madison, WI
   type: Seminar
@@ -30,12 +30,12 @@
   date: 2023-11-04
   url: https://sites.google.com/view/asu-algebra-days/home
   abstract: "The syzygies of projective curves are fairly well understood — for instance, an influential theorem of Gruson, Lazarsfeld, and Peskine gives optimal bounds on their regularity. There has been a flurry of activity in the past two decades centered around generalizing work on syzygies to the toric setting. I will discuss work that lifts machinery for understanding syzygies of projective curves to obtain a bound on the multigraded regularity of a curve in a product of projective spaces."
-- title: "Likelihood Correspondence of Toric Models"
+- title: "Likelihood Correspondence of Statistical Models"
   location: University of Hawaii-Manoa
   city: Manoa, HI
   type: Seminar
   date: 2023-10-19
-- title: "Likelihood Correspondence of Toric Models"
+- title: "Likelihood Correspondence of Statistical Models"
   location: Institute of Mathematical and Statistical Innovation
   city: Chicago, IL
   type: Conference
