Added specialty exam

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- message: "I've passed my specialty exam."
+  date: 2023-04-28
 - message: "A beer featuring art about algebraic geometry research that I helped design is now being sold in Madison. [Check it out.](https://casp.wisc.edu/delta-beer-lab-competition/)"
   date: 2021-05-14
 - message: "I began my first year in the Mathematics PhD program at [UW Madison](https://www.math.wisc.edu/)."
