Add May AMS sectional

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,3 +1,9 @@
+- title: "Multigraded Stillman Conjecture"
+  location: AMS Special Session on Homological Methods in Commutative Algebra and Algebraic Geometry
+  city: San Francisco, CA
+  type: Conference
+  date: 2024-05-04
+  url: https://www.ams.org/meetings/sectional/2299_program.html
 - title: "Sheaf Laplacians and Missing Data"
   location: ACMD Seminar
   city: Boulder, CO
