--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -2,6 +2,11 @@
   where: Turin, Italy
   start: 2024-06-17
   end: 2024-06-21
+- title: AMS Spring Western Sectional Meeting
+  venue: San Francisco State University
+  where: San Francisco, CA
+  start: 2024-05-04
+  end: 2024-05-05
 - title: NIST
   where: Boulder, CO
   start: 2024-03-18
