Add Likelihood Geometry paper

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -36,20 +36,23 @@
 #    - Conference
 #    - Journal
 
-#- id: LikelihoodGeometry
-#  title: The Likelihood Correspondence of Statistical Models
-#  year: 2024
-#  authors:
-#    - David Barnhill
-#    - John Cobb
-#    - Matthew Faust
-#  venue: In progress
-#  hide: true
-#  tags:
-#    - Toric Varieties
-#    - Algebraic Statistics
-#  type: 
-#    - In Progress
+- id: LikelihoodGeometry
+  title: Likelihood Correspondence of Statistical Models
+  year: 2023
+  authors:
+    - David Barnhill
+    - John Cobb
+    - Matthew Faust
+  venue: Submitted
+  pdf: https://arxiv.org/pdf/2312.08501.pdf
+  arxiv: "2312.08501"
+  highlight: true
+  description: Characteristics of the maximum likelihood estimation problems are reflected in the geometry of a variety called the likelihood correspondence. We construct the ideal of this variety for some popular examples of statistical models.
+  tags:
+    - Toric Varieties
+    - Algebraic Statistics
+  type: 
+    - Preprint
 
 #- id: MultigradedStillman
 #  title: Multigraded Stillman's Conjecture
@@ -85,7 +88,7 @@
   year: 2023
   authors: 
     - John Cobb
-  venue: to appear in Mathematische Zeitschrift
+  venue: To appear in Mathematische Zeitschrift
   arxiv: "2301.05979"
   pdf: https://arxiv.org/pdf/2301.05979.pdf
   highlight: true
@@ -105,7 +108,6 @@
     - John Cobb
   pdf: https://arxiv.org/pdf/2111.13773.pdf
   arxiv: "2111.13773"
-  highlight: true
   venue: Journal of Pure and Applied Algebra
   venue_url: https://www.journals.elsevier.com/journal-of-pure-and-applied-algebra
   venue_tags: 
