add ending PhD year

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,5 +1,5 @@
 - university: University of Wisconsin-Madison
-  years: 2019-
+  years: 2019-2024
   degree: Ph.D. in Mathematics
   location: Madison, WI
   description: 
