Put in end of GAGS organizing

--- a/_data/organizing.yml
+++ b/_data/organizing.yml
@@ -45,7 +45,7 @@
   highlight: 3
 - title: UW Madison Graduate Algebraic Geometry Seminar
   location: Madison, WI
-  dates: Fall 2021 -
+  dates: Fall 2021 - Spring 2024
   type: Seminar
   url: "https://hilbert.math.wisc.edu/wiki/index.php/Graduate_Algebraic_Geometry_Seminar"
   image: grothendieck_devil.jpg
