--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -10,6 +10,11 @@
   type: Seminar
   date: 2024-03-19
   url: https://www.nist.gov/itl/math/acmd-seminar-series
+- title: "Likelihood Correspondence of Statistical Models"
+  location: Center for Communications Research
+  city: Princeton, NJ
+  type: Seminar
+  date: 2024-01-16
 - title: "Multigraded regularity of curves"
   location: JMM Special Session on Recent Developments in Commutative Algebra
   city: San Francisco, CA
