--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -16,6 +16,10 @@
   where: Berkeley, CA
   start: 2024-01-22
   end: 2024-01-26
+- title: CCR
+  where: Princeton, NJ
+  start: 2024-01-15
+  end: 2024-01-17
 - title: Joint Mathematics Meetings
   where: San Francisco, CA
   start: 2024-01-03
