--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -11,6 +11,10 @@
   where: Boulder, CO
   start: 2024-03-18
   end: 2024-03-20
+- title: CCS
+  where: Bowie, MD
+  start: 2024-01-30
+  end: 2024-01-31
 - title: Commutative Algebra Workshop
   venue: MSRI
   where: Berkeley, CA
@@ -78,7 +82,7 @@
   where: Salt Lake City, Utah
   start: 2022-10-22
   end: 2022-10-23
-- title: Center for Computing Sciences
+- title: CCS
   where: Bowie, MD
   start: 2022-10-19
   end: 2022-10-19
