--- a/_data/teaching.yml
+++ b/_data/teaching.yml
@@ -2,9 +2,13 @@
   role: "Teaching Assistant"
   year: Spring 2024
   type: Current
+  panel: true
+  highlight: 1
+  image: calculus1.jpg
+  url: "/teaching/217Spring2024"
   professor: Cassie Williams
   location: University of Wisconsin-Madison
-  description: This page organizes calculus II discussion sections 304 and 305 running in Spring 2024.
+  description: This page organizes calculus I discussion sections 304 and 310 running in Spring 2024.
   roledescription: Hold weekly problem solving sessions and office hours.
 - title: "MATH 222: Calculus II"
   role: "Head Teaching Assistant"
