added NIST affiliation

--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -5,7 +5,7 @@
   date: 2024-05-04
   url: https://www.ams.org/meetings/sectional/2299_program.html
 - title: "Missing Data and Likelihood Geometry"
-  location: ACMD Seminar
+  location: ACMD Seminar (NIST)
   city: Boulder, CO
   type: Seminar
   date: 2024-03-12
