Add mentoring DRP role

--- a/_data/service.yml
+++ b/_data/service.yml
@@ -32,6 +32,12 @@
   location: Madison, WI
   years: Fall 2020-Spring 2021
   description: "FGSS links first-generation college students to first generation graduate and faculty mentors for monthly meetings. "
+- title: Mentor
+  at: UW Madison Directed Reading Program 
+  url: https://sites.google.com/site/uwmadisondrp/
+  location: Madison, WI
+  years: Spring 2024
+  description: Led a group of students in reading Stillwell's "Mathematics and its History".
 - title: Organizer
   at: UW Madison Directed Reading Program 
   url: https://sites.google.com/site/uwmadisondrp/
