--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -1,4 +1,9 @@
 - title: "Multigraded Stillman Conjecture"
+  location: URiCA (Upcoming researchers in Commutative Algebra) 2024
+  city: Lincoln, NE
+  type: Conference
+  date: 2024-05-11
+- title: "Multigraded Stillman Conjecture"
   location: AMS Special Session on Homological Methods in Commutative Algebra and Algebraic Geometry
   city: San Francisco, CA
   type: Conference
