--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -2,6 +2,11 @@
   where: Turin, Italy
   start: 2024-06-17
   end: 2024-06-21
+- title: URiCA 
+  venue: University of Nebraska-Lincoln
+  where: Lincoln, NE
+  start: 2024-05-11
+  end: 2024-05-12
 - title: AMS Spring Western Sectional Meeting
   venue: San Francisco State University
   where: San Francisco, CA
