change to small caps

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,10 +1,10 @@
 - university: University of Wisconsin-Madison
   years: 2019-2024
-  degree: Ph.D. in Mathematics
+  degree: ph.d. in mathematics
   location: Madison, WI
   description: 
-  - "Advisors: Daniel Erman, Michael Kemeny."
+  - "Advisors: Daniel Erman, [Michael Kemeny](https://people.math.wisc.edu/~kemeny/homepage.html)."
 - university: Honors College of Charleston
   years: 2015-2019
-  degree: B.S. Mathematics | B.A. Chemistry | Minor Data Science
+  degree: b.s. mathematics, b.a. chemistry, minor data science
   location: Charleston, SC
