--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 - university: University of Wisconsin-Madison
   years: 2019-2024
-  degree: ph.d. in mathematics
+  degree: ph.d. mathematics
   location: Madison, WI
   description: 
   - "Advisors: Daniel Erman, [Michael Kemeny](https://people.math.wisc.edu/~kemeny/homepage.html)."
